--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Fetching Data with JavaScript</title>
+  <title>There be Dragons Here.</title>
   <style> body { font-family: sans-serif; text-align: center; } </style>
 </head>
 <body>
-<h1>Testing JavaScript fetch()</h1>
-<p>This file contains JavaScript for interacting with DragonAPI on Firebird. Results will appear below.</p>
+<h1>There Be Dragons Here.</h1>
+<p>This is an example frontend for testing a "dragons" endpoint on Firebird.</p>
 
 <div id="profile"></div>
 <div id="download"></div>
