--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>There Be Dragons Here.</h1>
-<p>This is an example frontend for testing a "dragons" endpoint on Firebird.</p>
+<p>There are a few cats as well. This is an example frontend for testing a "dragons" endpoint on Firebird.</p>
 
 <div id="profile"></div>
 <div id="download"></div>
